<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/detailFragment">

        <FrameLayout
            android:id="@+id/statusImageContainer"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            >
            <ImageView
                android:id="@+id/statusImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:visibility="gone"
                app:srcCompat="@drawable/placeholder_picture_of_day"/>
            <ProgressBar
                android:id="@+id/statusProgressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/detailListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/black"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/statusImageContainer"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/titleCloseApproach"
                style="@style/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/close_approach_date" />

            <TextView
                android:id="@+id/infoCloseApproach"
                style="@style/detailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_loading" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/titleAbsoluteMagnitude"
                        style="@style/detailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/absolute_magnitude" />

                    <TextView
                        android:id="@+id/infoAbsoluteMagnitude"
                        style="@style/detailInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_loading" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <ImageView
                    android:id="@+id/helpButton"
                    android:contentDescription="@string/content_description_astronomical_unit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_help_circle" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <TextView
                android:id="@+id/titleEstimatedDiameter"
                style="@style/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Estimated Diameter" />

            <TextView
                android:id="@+id/infoEstimatedDiameter"
                style="@style/detailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_loading" />

            <TextView
                android:id="@+id/titleRelativeVelocity"
                style="@style/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Relative Velocity" />

            <TextView
                android:id="@+id/infoRelativeVelocity"
                style="@style/detailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_loading" />

            <TextView
                android:id="@+id/titleDistanceFromEarth"
                style="@style/detailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Distance From Earth" />

            <TextView
                android:id="@+id/infoDistanceFromEarth"
                style="@style/detailInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_loading" />


        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/content_description_google_add"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-3940256099942544/6300978111"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.gms.ads.AdView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>